--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Chrome, Firefox OS and Opera -->
-    <meta name="theme-color" content="#533A7B">
+    <meta name="theme-color" content="#99e1d9">
     <!-- Windows Phone -->
-    <meta name="msapplication-navbutton-color" content="#533A7B">
+    <meta name="msapplication-navbutton-color" content="#99e1d9">
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
